# scrapecrow

./: pelicanconf.py  publishconf.py  pyproject.toml
content/: Asynchronous Web Scraping.md  Reverse Engineering Basics.md  Web Scraping Target Discovery - Crawling.md  Web Scraping Target Discovery - Indexes.md  Web Scraping Target Discovery - Search Bar.md  Web Scraping Target Discovery - Sitemaps.md  Web Scraping Target Discovery.md  test.md
content/examples/: async-aiolimiter.py  async-callbacks.py  async-scrape.py  async-semaphore.py  discovery-crawl.py  discovery-search.py  discovery-sitemaps.py  etag.py  foodcom.py  sync-scrape.py
content/extra/: CNAME
content/images/: async-vs-sync.drawio  crawl-flow.drawio  hm.com-double-end-query.drawio
content/pages/: about.md  coffee.md  hire.md
content/partial/: Web Scraping Target Discovery_intro.md  Web Scraping Target Discovery_outro.md
examples/: discovery-sitemaps.py
